# Polyad-Agentron-

./: .dockerignore  .env.example  .env.local  .env.production  .gitignore  Dockerfile  README.md  async_tools.py  build_app.py  check_installation.py  config.json  config.json.example  config.py  config.yaml  create-polyad-app.sh  decision_engine.py  demo.py  deploy.sh  docker-compose.yml  github_upload.py  launch-polyad.sh  main.py  performance.md  polyad.py  polyad_app.py  polyad_icon.icns  pyproject.toml  quick_test.py  requirements-app.txt  requirements.txt  resource_manager.py  run_all.py  run_interface.py  run_tests.sh  setup.py  setup.sh  start-production.sh  test_polyad.py  tools.py
.secrets/: jwt.env  jwt_config.json
api/: __init__.py  app.py  config.py
benchmarks/: benchmark.py
cache/: polyad_cache.db
config/: config.py  config.yaml  environments.py  grafana_dashboards.py  logging_config.py  monitoring_config.py  monitoring_thresholds.py  production.yaml
core/: adaptive_learning.py  adaptive_memory.py  agent.py  api_manager.py  autonomous_agent.py  autonomous_cognition.py  backup.py  backup_manager.py  compression.py  data_manager.py  decision_engine.py  humanoid_interface.py  knowledge_base.py  learning_engine.py  model_manager.py  monitoring.py  multimodal_processing.py  notifications.py  ollama_client.py  parallel_processor.py  polyad.py  resource_manager.py  service_manager.py
dashboard/: api_config.py  app.py  dashboard_manager.py  main.py  run.py  web_search.py
data/: knowledge.db
docs/: README.md  advanced.md  api.md  architecture.md  (+10 more)
(+123 files in other folders)
